[project]
name = "mcp-server-nso"
version = "0.1.0"
description = "MCP server for NSO (Network Services Orchestrator)"
authors = [
    {name = "hitakaha", email = "hitakaha@cisco.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []